[gd_scene load_steps=3 format=3 uid="uid://clka4e4mvp4ys"]

[ext_resource type="Script" path="res://Characters/Resources/AI/ai_controller.gd" id="1_1yw8l"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_fhi68"]
points = PackedVector3Array(-1, -1, 0, -1, 1, 0, 1, -1, 0, 1, 1, 0, -10, 1.8, -10, -10, -1.8, -10, 10, 1.8, -10, 10, -1.8, -10)

[node name="AIController" type="Node3D" groups=["Controller"]]
script = ExtResource("1_1yw8l")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
avoidance_enabled = true

[node name="DetectionArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
collision_layer = 0
collision_mask = 6

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("ConvexPolygonShape3D_fhi68")

[node name="ForgetTarget" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="velocity_computed" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_velocity_computed"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="ForgetTarget" to="." method="forget_target"]
